--- a/My-Challenge-Begins/index.html
+++ b/My-Challenge-Begins/index.html
@@ -19,7 +19,7 @@
         </nav>
         <section class="banner-Design">
             <div class="banner-item">
-                <img src="/B10A1-Challenge-Begins/assets/Group.png" alt="">
+                <img src="../B10A1-Challenge-Begins/assets/Group.png" alt="">
                 <h2 class="banner-title">"In the near future, I hope to become a Developer."</h2>
                 <p>That’s a fantastic goal! Becoming a developer can open up exciting opportunities. Whether you’re
                     interested in web development</p>
@@ -53,12 +53,12 @@
                         </button>
                     </div>
                     <div class="frist-part-image">
-                        <img src="/B10A1-Challenge-Begins/assets/Layer_1.png" alt="">
+                        <img src="../B10A1-Challenge-Begins/assets/Layer_1.png" alt="">
                     </div>
                 </div>
                 <div class="explore--second-part">
                     <div class="second-part-image">
-                        <img src="/B10A1-Challenge-Begins/assets/Group 3.png" alt="">
+                        <img src="../B10A1-Challenge-Begins/assets/Group 3.png" alt="">
                     </div>
                     <div class="second-part-description">
                         <h3>I will help People by creating Modern Web System</h3>
@@ -79,7 +79,7 @@
                         </button>
                     </div>
                     <div class="third-part-image">
-                        <img src="/B10A1-Challenge-Begins/assets/Group 4.png" alt="">
+                        <img src="../B10A1-Challenge-Begins/assets/Group 4.png" alt="">
                     </div>
                 </div>
             </section>
@@ -115,19 +115,19 @@
             </div>
             <div class="target-image-content">
                 <div class="first-target">
-                    <img src="/B10A1-Challenge-Begins/assets/html.png" alt="">
+                    <img src="../B10A1-Challenge-Begins/assets/html.png" alt="">
                     <h3>HTML</h3>
                     <p>HyperText Markup Language (HTML) is the standard markup language for documents design.</p>
                     <a href="">Learn More</a>
                 </div>
                 <div class="second-target">
-                    <img src="/B10A1-Challenge-Begins/assets/css.png" alt="">
+                    <img src="../B10A1-Challenge-Begins/assets/css.png" alt="">
                     <h3>CSS</h3>
                     <p>CSS is the language we use to style an HTML document.</p>
                     <a href="">Learn More</a>
                 </div>
                 <div class="third-target">
-                    <img src="/B10A1-Challenge-Begins/assets/js.png" alt="">
+                    <img src="../B10A1-Challenge-Begins/assets/js.png" alt="">
                     <h3>JavaScript</h3>
                     <p>JavaScript (JS) is a lightweight interpreted programming language with first-class functions.</p>
                     <a href="">Learn More</a>
