added a support section done

--- a/My-Challenge-Begins/index.html
+++ b/My-Challenge-Begins/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <!-- start the header option-->option
+    <!-- start the header option-->
     <header>
         <nav>
             <h1>K.Mahmud</h1>
