--- a/My-Challenge-Begins/index.html
+++ b/My-Challenge-Begins/index.html
@@ -153,10 +153,10 @@
                 <h4>An Open Commitment by Awlad Hossain</h4>
             </div>
             <div>
-                <a href="https://www.facebook.com/"><img src="/B10A1-Challenge-Begins/assets/facebook.png" alt=""></a>
-                <a href="https://github.com/"><img src="/B10A1-Challenge-Begins/assets/github.png" alt=""></a>
+                <a href="https://www.facebook.com/"><img src="../B10A1-Challenge-Begins/assets/facebook.png" alt=""></a>
+                <a href="https://github.com/"><img src="../B10A1-Challenge-Begins/assets/github.png" alt=""></a>
                 <a href="https://scholar.google.com/citations?user=iqRP_dsAAAAJ"><img
-                        src="/B10A1-Challenge-Begins/assets/linkedin-icon 1.png" alt=""></a>
+                        src="../B10A1-Challenge-Begins/assets/linkedin-icon 1.png" alt=""></a>
             </div>
         </div>
     </footer>
